--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "types": "index.d.ts",
   "scripts": {
     "test": "karma start",
-    "prepare": "npx webpack"
+    "prepare": "webpack"
   },
   "repository": {
     "type": "git",
@@ -38,10 +38,11 @@
     "karma-mocha-reporter": "^2.2.5",
     "karma-typescript": "^5.0.2",
     "puppeteer": "^3.0.0",
+    "terser-webpack-plugin": "^5.3.7",
     "ts-loader": "^7.0.0",
     "typescript": "^3.8.3",
-    "webpack": "^4.42.1",
-    "webpack-cli": "^3.3.11"
+    "webpack": "^5.78.0",
+    "webpack-cli": "^5.0.1"
   },
   "dependencies": {
     "antlr4ts": "^0.4.1-alpha.0"
